--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <style>html,body{height:100%}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}</style><link rel="stylesheet" href="styles.e80792cf181eeafa.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.e80792cf181eeafa.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.e3db00698407d5cf.js" type="module"></script><script src="polyfills.01848cb04b689056.js" type="module"></script><script src="main.997b18fbb02a7f9c.js" type="module"></script>
+<script src="https://github.com/sa-e/prueba/blob/main/runtime.e3db00698407d5cf.js" type="module"></script><script src="polyfills.01848cb04b689056.js" type="module"></script><script src="main.997b18fbb02a7f9c.js" type="module"></script>
 
 </body></html>
